cmake_minimum_required(VERSION 2.8.12)
project(foobar)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fno-rtti -fno-exceptions -Wall -Wextra")
endif()
if(MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
endif()
add_executable(jzontests tests.cpp)
add_executable(jzonprint print.cpp)
add_executable(jzonstats stats.cpp)
